--- a/FlixTv/Views/Movie/_FilterBar.cshtml
+++ b/FlixTv/Views/Movie/_FilterBar.cshtml
@@ -18,7 +18,7 @@
                         <form action="https://localhost:44353/Movie/Category" method="get">
                             @*------------------Select Genre Start--------------*@
                             <select class="catalog__select" name="Genre">
-                                <option value="AllGenres">All genres</option>
+                                <option value="">All genres</option>
                                 <option value="Action">Action</option>
                                 <option value="Adventure">Adventure</option>
                                 <option value="Biography">Biography</option>
@@ -50,7 +50,7 @@
 
                             @*------------------Select Year Start--------------*@
                             <select class="catalog__select" name="Year">
-                                <option value="AllYears">All the years</option>
+                                <option value="">All the years</option>
                                 <option value="2022">Best of 2022</option>
                                 <option value="2021">Best of 2021</option>
                                 <option value="20100">Best of 2010-20</option>
