--- a/FlixTv/Views/Movie/Index.cshtml
+++ b/FlixTv/Views/Movie/Index.cshtml
@@ -50,7 +50,7 @@
             let settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "https://ott-details.p.rapidapi.com/advancedsearch?type=movie&sort=latest&min_imdb=8",
+                "url": "https://ott-details.p.rapidapi.com/advancedsearch?type=movie&sort=latest&year=2023",
                 "method": "GET",
                 "timeout": 0,
                 "headers": {
@@ -148,7 +148,7 @@
             let settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "https://ott-details.p.rapidapi.com/advancedsearch?type=movie&sort=highestrated",
+                "url": "https://ott-details.p.rapidapi.com/advancedsearch?type=movie&sort=highestrated&min_imdb=9",
                 "method": "GET",
                 "timeout": 0,
                 "headers": {
@@ -243,7 +243,7 @@
             let settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "https://ott-details.p.rapidapi.com/advancedsearch?start_year=1980&end_year=2005&type=movie&sort=highestrated",
+                "url": "https://ott-details.p.rapidapi.com/advancedsearch?&type=movie&sort=oldest&min_imdb=9.8",
                 "method": "GET",
                 "timeout": 0,
                 "headers": {
