--- a/FlixTv/Views/Movie/_CategoryResults.cshtml
+++ b/FlixTv/Views/Movie/_CategoryResults.cshtml
@@ -7,9 +7,9 @@
     <div class="catalog catalog--page catalog--list">
         <div class="container">
             <div class="row">
-                <div class="col-12"  >
-                    
+                <div class="col-12">
 
+                    <h1 id="noResults" style="color:white"></h1>
                     <div class="row row--grid" id="categoryGrid">
                         <!---------Here renders the data--------->
                     </div>
