--- a/FlixTv/Views/Movie/_MovieCategories.cshtml
+++ b/FlixTv/Views/Movie/_MovieCategories.cshtml
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?Year=2022&">New Releases</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?Year=2023">New Releases</a></h2>
             </div>
 
             <div class="col-12">
@@ -29,7 +29,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="category.html">Highest Rated</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?&minRating=9&sortingBy=highestrated">Highest Rated</a></h2>
             </div>
             <div class="col-12">
                 <div class="section__carousel-wrap ">
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="category.html">Old Time Classic</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?sortingBy=oldest&minRating=9.8">Old Time Classic</a></h2>
             </div>
 
 
