--- a/FlixTv/Views/Home/_Catalog.cshtml
+++ b/FlixTv/Views/Home/_Catalog.cshtml
@@ -4,18 +4,18 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="category.html">Movies for You</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?genre=drama&minRating=9.8">Best of Drama Movies</a></h2>
             </div>
 
 
             <div class="col-12">
                 <div class="section__carousel-wrap ">
-                    <div class="section__carousel owl-carousel" id="moviesForUser">
+                    <div class="section__carousel owl-carousel" id="bestOfDramaMovies">
                         <!---------Here renders the data--------->
                     </div>
 
-                    <button class="section__nav section__nav--cards section__nav--prev" data-nav="#moviesForUser" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.25 7.72559L16.25 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M7.2998 1.70124L1.2498 7.72524L7.2998 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
-                    <button class="section__nav section__nav--cards section__nav--next" data-nav="#moviesForUser" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.75 7.72559L0.75 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M9.7002 1.70124L15.7502 7.72524L9.7002 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
+                    <button class="section__nav section__nav--cards section__nav--prev" data-nav="#bestOfDramaMovies" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.25 7.72559L16.25 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M7.2998 1.70124L1.2498 7.72524L7.2998 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
+                    <button class="section__nav section__nav--cards section__nav--next" data-nav="#bestOfDramaMovies" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.75 7.72559L0.75 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M9.7002 1.70124L15.7502 7.72524L9.7002 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
                 </div>
             </div>
         </div>
@@ -27,17 +27,17 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="category.html">Series for You </a></h2>
+                <h2 class="section__title"><a href="#">Top Series</a></h2>
             </div>
 
             <div class="col-12">
                 <div class="section__carousel-wrap">
-                    <div class="section__carousel owl-carousel" id="seriesForUser">
+                    <div class="section__carousel owl-carousel" id="topSeries">
                         <!---------Here renders the data--------->
                     </div>
 
-                    <button class="section__nav section__nav--cards section__nav--prev" data-nav="#seriesForUser" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.25 7.72559L16.25 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M7.2998 1.70124L1.2498 7.72524L7.2998 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
-                    <button class="section__nav section__nav--cards section__nav--next" data-nav="#seriesForUser" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.75 7.72559L0.75 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M9.7002 1.70124L15.7502 7.72524L9.7002 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
+                    <button class="section__nav section__nav--cards section__nav--prev" data-nav="#topSeries" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1.25 7.72559L16.25 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M7.2998 1.70124L1.2498 7.72524L7.2998 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
+                    <button class="section__nav section__nav--cards section__nav--next" data-nav="#topSeries" type="button"><svg width="17" height="15" viewBox="0 0 17 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M15.75 7.72559L0.75 7.72559" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /><path d="M9.7002 1.70124L15.7502 7.72524L9.7002 13.7502" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" /></svg></button>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="category.html">Trending on FlixTv</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?Genre=action&SortingBy=latest&Year=2020">Trending on FlixTv</a></h2>
             </div>
 
             <div class="col-12">
