--- a/FlixTv/Views/Movie/Details.cshtml
+++ b/FlixTv/Views/Movie/Details.cshtml
@@ -19,12 +19,12 @@
     <script src="~/www/main/js/main.js"></script>
 
     @*------------------------Add Movie Information Start-----------------------------*@
-    <script>
-        
-        $("#synopsis").html("@Model.Synopsis");
+<script>
+        function delay(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
 
-
-            /*---------------Ajax Start-----------------*/
+            /*---------------Ajax for Details Start-----------------*/
         $(document).ready(async function () {
 
                 let id = "@Model.MovieId";
@@ -45,31 +45,42 @@
 
                 });
 
-            });
-            /*--------------- Ajax End-----------------*/
+       });
+            /*--------------- Ajax for Details End-----------------*/
 
-            /*---------------------Add Details Start-------------------------*/
+        /*---------------------Add Details Start-------------------------*/
 
-            function addDetails(details) {
-                    let title = details.title;
-                    let rating = details.imdbrating ?? "unrated";
-                    let genre = details.genre;
-                    let releaseYear = details.released;
+        function addDetails(details) {
+                let id = "@Model.MovieId";
+                let title = details.title;
+                let synopsis = details.synopsis;
+                let rating = details.imdbrating ?? "unrated";
+                let genre = details.genre;
+                let releaseYear = details.released;
                 let duration = details.runtime ?? "min";
-                console.log(title);
-                    let url = details.imageurl[0];
+                let url = details.imageurl[0];
 
-                    $("#title").html(title);
-                    $("#rating").html(rating);
-                    $("#genre").html(genre);
-                    $("#year").html(releaseYear);
-                    $("#duration").html(duration);
-                    $("#image").css("background", `url(${url}&quot;)`);
+                $("#title").html(title);
+                $("#synopsis").html(synopsis);
+                $("#rating").html(rating);
+                $("#genre").html(genre);
+                $("#year").html(releaseYear);
+                $("#duration").html(duration);
+                $("#image").css("background", `url(${url}&quot;)`);
+                
 
-            };
-            /*---------------------Add Details End-------------------------*/
+        };
+        /*---------------------Add Details End-------------------------*/
 
-    </script>
+
+       
+
+        
+
+   
+    
+
+</script>
     @*------------------------Add Movie Information End-----------------------------*@
 
 }
