--- a/FlixTv/Views/Movie/_FilterBar.cshtml
+++ b/FlixTv/Views/Movie/_FilterBar.cshtml
@@ -51,13 +51,13 @@
                             @*------------------Select Year Start--------------*@
                             <select class="catalog__select" name="Year">
                                 <option value="">All the years</option>
-                                <option value="2022">Best of 2022</option>
-                                <option value="2021">Best of 2021</option>
                                 <option value="20100">Best of 2010-20</option>
                                 <option value="20000">Best of 2000-10</option>
                                 <option value="19900">Best of '90s</option>
                                 <option value="19800">Best of '80s</option>
                                 <option value="19700">Best of '70s'</option>
+                                <option value="2022">2022</option>
+                                <option value="2021">2021</option>
                                 <option value="2020">2020</option>
                                 <option value="2019">2019</option>
                                 <option value="2018">2018</option>
