--- a/FlixTv/Views/Movie/_CategoryResults.cshtml
+++ b/FlixTv/Views/Movie/_CategoryResults.cshtml
@@ -1,47 +1,40 @@
-﻿
+﻿<!-- catalog -->
+<div class="catalog catalog--page catalog--list">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
 
-
-
-    
-    <!-- catalog -->
-    <div class="catalog catalog--page catalog--list">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-
-                    <h1 id="noResults" style="color:white"></h1>
-                    <div class="row row--grid" id="categoryGrid">
-                        <!---------Here renders the data--------->
-                    </div>
+                <h1 id="noResults" style="color:white"></h1>
+                <div class="row row--grid" id="categoryGrid">
+                    <!---------Here renders the data--------->
                 </div>
             </div>
+        </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <div class="catalog__paginator-wrap">
-                        <span class="catalog__pages">12 from 144</span>
+        <div class="row">
+            <div class="col-12">
+                <div class="catalog__paginator-wrap">
+                    <span id="pagesCatalog" class="catalog__pages">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</span>
 
-                        <ul class="catalog__paginator">
-                            <li>
-                                <a href="#">
-                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.75 5.36475L13.1992 5.36475" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M5.771 10.1271L0.749878 5.36496L5.771 0.602051" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
-                                </a>
-                            </li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li>
-                                <a href="#">
-                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.1992 5.3645L0.75 5.3645" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M8.17822 0.602051L13.1993 5.36417L8.17822 10.1271" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="catalog__paginator">
+                        <li>
+                            <a href="#">
+                                <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.75 5.36475L13.1992 5.36475" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M5.771 10.1271L0.749878 5.36496L5.771 0.602051" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                            </a>
+                        </li>
+                        @for(int i = 1; i <= Model.PageCount; i++)
+                            {
+                              <li ><a  href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&page=@i">@i</a></li>
+                            }
+                        <li>
+                            <a href="#">
+                                <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.1992 5.3645L0.75 5.3645" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M8.17822 0.602051L13.1993 5.36417L8.17822 10.1271" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!-- end catalog -->
-    
-   
+</div>
+<!-- end catalog -->
