--- a/FlixTv/Views/Movie/_CategoryResults.cshtml
+++ b/FlixTv/Views/Movie/_CategoryResults.cshtml
@@ -18,18 +18,45 @@
 
                     <ul class="catalog__paginator">
                         <li>
-                            <a href="#">
-                                <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.75 5.36475L13.1992 5.36475" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M5.771 10.1271L0.749878 5.36496L5.771 0.602051" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
-                            </a>
-                        </li>
-                        @for(int i = 1; i <= Model.PageCount; i++)
+                            @if (Model.PageNumber == 1)
                             {
-                              <li ><a  href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&page=@i">@i</a></li>
+                                <a href="#">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.75 5.36475L13.1992 5.36475" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M5.771 10.1271L0.749878 5.36496L5.771 0.602051" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
                             }
+                            else
+                            {
+                                <a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&page=@(Model.PageNumber - 1)">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.75 5.36475L13.1992 5.36475" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M5.771 10.1271L0.749878 5.36496L5.771 0.602051" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
+                            }
+
+                        </li>
+                        @for (int i = 1; i <= Model.PageCount; i++)
+                        {
+                            if (Model.PageNumber == i)
+                            {
+                                <li class="active"><a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&page=@i">@i</a></li>
+                            }
+                            else
+                            {
+                                <li><a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&page=@i">@i</a></li>
+                            }
+                        }
                         <li>
-                            <a href="#">
-                                <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.1992 5.3645L0.75 5.3645" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M8.17822 0.602051L13.1993 5.36417L8.17822 10.1271" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
-                            </a>
+                            @if (Model.PageNumber == Model.PageCount)
+                            {
+                                <a href="#">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.1992 5.3645L0.75 5.3645" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M8.17822 0.602051L13.1993 5.36417L8.17822 10.1271" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&page=@(Model.PageNumber + 1)">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.1992 5.3645L0.75 5.3645" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M8.17822 0.602051L13.1993 5.36417L8.17822 10.1271" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
+                            }
+                           
                         </li>
                     </ul>
                 </div>
