--- a/FlixTv/Views/Movie/_CategoryResults.cshtml
+++ b/FlixTv/Views/Movie/_CategoryResults.cshtml
@@ -4,6 +4,7 @@
         <div class="row">
             <div class="col-12">
 
+                <h1 id="searchFor" style="color:white"></h1>
                 <h1 id="noResults" style="color:white"></h1>
                 <div class="row row--grid" id="categoryGrid">
                     <!---------Here renders the data--------->
