--- a/FlixTv/Views/Home/_Catalog.cshtml
+++ b/FlixTv/Views/Home/_Catalog.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?genre=drama&minRating=9.8">Best of Drama Movies</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?genre=drama&minRating=9.8&special=BestDramaMovies">Best of Drama Movies</a></h2>
             </div>
 
 
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?Genre=action&SortingBy=latest&Year=2020">Trending on FlixTv</a></h2>
+                <h2 class="section__title"><a href="https://localhost:44353/Movie/Category?Genre=action&SortingBy=latest&Year=2020&special=TrendingOnFlixTv">Trending on FlixTv</a></h2>
             </div>
 
             <div class="col-12">
