--- a/FlixTv/Views/Movie/Category.cshtml
+++ b/FlixTv/Views/Movie/Category.cshtml
@@ -12,12 +12,24 @@
             <div class="col-12 col-xl-6">
                 <h1 class="section__title section__title--head">
                     Results for :
-                    <a id="genre">@(ViewBag.Genre != "" ? "#" + ViewBag.Genre : "")</a>
-                    <a id="years">@(ViewBag.Year != "" ? "#" + ViewBag.Year : "")</a>
-                    <a id="minRating">@(ViewBag.MinRating != "" ? "#MinRating: " + ViewBag.MinRating : "")</a>
-                    <a id="maxRating">@(ViewBag.MaxRating != "" ? "#MaxRating: " + ViewBag.MaxRating : "")</a>
-                    <a id="sortingBy">@(ViewBag.SortingBy != "" ? "#" + ViewBag.SortingBy : "")</a>
-                    <a id="noFiltering">@(ViewBag.Genre == "" && ViewBag.Year == "" && ViewBag.MinRating == "" && ViewBag.MaxRating == "" && ViewBag.Sortingby == "" ? "#NoFiltering" : "")</a>
+                    @if (ViewBag.Special == null || ViewBag.Special == "")
+                    {
+                        <a id="genre">@(ViewBag.Genre != "" ? "#" + ViewBag.Genre : "")</a>
+                        <a id="years">@(ViewBag.Year != "" ? "#" + ViewBag.Year : "")</a>
+                        <a id="minRating">@(ViewBag.MinRating != "" ? "#MinRating: " + ViewBag.MinRating : "")</a>
+                        <a id="maxRating">@(ViewBag.MaxRating != "" ? "#MaxRating: " + ViewBag.MaxRating : "")</a>
+                        <a id="sortingBy">@(ViewBag.SortingBy != "" ? "#" + ViewBag.SortingBy : "")</a>
+                        <a id="noFiltering">@(ViewBag.Genre == "" && ViewBag.Year == "" 
+                            && ViewBag.MinRating == ""
+                            && ViewBag.MaxRating == "" 
+                            && ViewBag.Sortingby == "" ? "#NoFiltering" : "")</a>
+                    }
+                    else
+                    {
+                        <a id="special">#@ViewBag.Special</a>
+
+                    }
+
                 </h1>
             </div>
 
@@ -32,7 +44,74 @@
 </section>
 <!-- end above filter bar -->
 @Html.Partial("~/Views/Movie/_FilterBar.cshtml")
-@Html.Partial("~/Views/Movie/_CategoryResults.cshtml")
+<!-- catalog -->
+<div class="catalog catalog--page catalog--list">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+
+                <h1 id="searchFor" style="color:white"></h1>
+                <h1 id="noResults" style="color:white"></h1>
+                <div class="row row--grid" id="categoryGrid">
+                    <!---------Here renders the data--------->
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="catalog__paginator-wrap">
+                    <span id="pagesCatalog" class="catalog__pages">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</span>
+
+                    <ul class="catalog__paginator">
+                        <li>
+                            @if (Model.PageNumber == 1)
+                            {
+                                <a href="#">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.75 5.36475L13.1992 5.36475" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M5.771 10.1271L0.749878 5.36496L5.771 0.602051" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&special=@ViewBag.Special&page=@(Model.PageNumber - 1)">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.75 5.36475L13.1992 5.36475" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M5.771 10.1271L0.749878 5.36496L5.771 0.602051" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
+                            }
+
+                        </li>
+                        @for (int i = 1; i <= Model.PageCount; i++)
+                        {
+                            if (Model.PageNumber == i)
+                            {
+                                <li class="active"><a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&special=@ViewBag.Special&page=@i">@i</a></li>
+                            }
+                            else
+                            {
+                                <li><a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&special=@ViewBag.Special&page=@i">@i</a></li>
+                            }
+                        }
+                        <li>
+                            @if (Model.PageNumber == Model.PageCount)
+                            {
+                                <a href="#">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.1992 5.3645L0.75 5.3645" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M8.17822 0.602051L13.1993 5.36417L8.17822 10.1271" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="https://localhost:44353/Movie/Category?Genre=@ViewBag.Genre&Year=@ViewBag.Year&MinRating=@ViewBag.MinRating&MaxRating=@ViewBag.MaxRating&SortingBy=@ViewBag.Sortingby&special=@ViewBag.Special&page=@(Model.PageNumber + 1)">
+                                    <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M13.1992 5.3645L0.75 5.3645" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /><path d="M8.17822 0.602051L13.1993 5.36417L8.17822 10.1271" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round" /></svg>
+                                </a>
+                            }
+
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end catalog -->
 
 
 
@@ -66,6 +145,8 @@
 
 
 
+
+
     @*================================================== Add Movies To Grid Start====================================================*@
     <script type="text/javascript">
 
@@ -80,7 +161,7 @@
 
         }
 
-        async function addMovies(movies) {                         // Add MovieCard to Grid 
+        async function addMovies(movies) {                         // Add MovieCard to Grid
             for (let movie of movies) {
 
                 let id = movie.ImdbId;
@@ -114,7 +195,7 @@
             }
 
         };
-        
+
     </script>
     @*================================================== Add Movies To Grid End====================================================*@
 }
