--- a/FlixTv/Views/Movie/Category.cshtml
+++ b/FlixTv/Views/Movie/Category.cshtml
@@ -136,9 +136,9 @@
         }else if (@ViewBag.Year == 19900) {
             $("#years").html("#90's");
         }else if (@ViewBag.Year == 20000) {
-            $("#years").html("#Best of 2000-2010");
+            $("#years").html("#2000-2010");
         }else if (@ViewBag.Year == 20100) {
-            $("#years").html("#Best of 2010-2020");
+            $("#years").html("#2010-2020");
         }
 
     </script>
